fixed explore window