@@ -49,208 +49,209 @@ import java.util.stream.Collectors;
 @Service
 public class ScmDefectRateServiceImpl extends BitBucketKPIService<Double, List<Object>, Map<String, Object>> {
 
-    private static final String MR_COUNT = "No of PRs";
-    private static final String ASSIGNEE_SET = "assigneeSet";
-    private static final String MERGE_REQUEST_LIST = "mergeRequestList";
-    private static final List<String> DEFECT_KEYWORDS = List.of("fix", "bug", "repair", "defect");
+	private static final String MR_COUNT = "No of PRs";
+	private static final String ASSIGNEE_SET = "assigneeSet";
+	private static final String MERGE_REQUEST_LIST = "mergeRequestList";
+	private static final List<String> DEFECT_KEYWORDS = List.of("fix", "bug", "repair", "defect");
 
-    @Autowired
-    private ConfigHelperService configHelperService;
+	@Autowired
+	private ConfigHelperService configHelperService;
 
-    @Autowired
-    private KpiHelperService kpiHelperService;
+	@Autowired
+	private KpiHelperService kpiHelperService;
 
-    @Override
-    public String getQualifierType() {
-        return KPICode.DEFECT_RATE.name();
-    }
+	@Override
+	public String getQualifierType() {
+		return KPICode.DEFECT_RATE.name();
+	}
 
-    @Override
-    public KpiElement getKpiData(KpiRequest kpiRequest, KpiElement kpiElement, Node projectNode)
-            throws ApplicationException {
-        Map<String, Node> nodeMap = Map.of(projectNode.getId(), projectNode);
-        projectWiseLeafNodeValue(kpiElement, nodeMap, projectNode, kpiRequest);
+	@Override
+	public KpiElement getKpiData(KpiRequest kpiRequest, KpiElement kpiElement, Node projectNode)
+			throws ApplicationException {
+		Map<String, Node> nodeMap = Map.of(projectNode.getId(), projectNode);
+		projectWiseLeafNodeValue(kpiElement, nodeMap, projectNode, kpiRequest);
 
-        log.debug("[PROJECT-WISE][{}]. Values of leaf node after KPI calculation {}", kpiRequest.getRequestTrackerId(),
-                projectNode);
+		log.debug("[PROJECT-WISE][{}]. Values of leaf node after KPI calculation {}", kpiRequest.getRequestTrackerId(),
+				projectNode);
 
-        Map<Pair<String, String>, Node> nodeWiseKPIValue = new HashMap<>();
-        calculateAggregatedValueMap(projectNode, nodeWiseKPIValue, KPICode.DEFECT_RATE);
+		Map<Pair<String, String>, Node> nodeWiseKPIValue = new HashMap<>();
+		calculateAggregatedValueMap(projectNode, nodeWiseKPIValue, KPICode.DEFECT_RATE);
 
-        Map<String, List<DataCount>> trendValuesMap = getTrendValuesMap(kpiRequest, kpiElement, nodeWiseKPIValue,
-                KPICode.DEFECT_RATE);
-        kpiElement.setTrendValueList(DeveloperKpiHelper.prepareDataCountGroups(trendValuesMap));
-        return kpiElement;
-    }
+		Map<String, List<DataCount>> trendValuesMap = getTrendValuesMap(kpiRequest, kpiElement, nodeWiseKPIValue,
+				KPICode.DEFECT_RATE);
+		kpiElement.setTrendValueList(DeveloperKpiHelper.prepareDataCountGroups(trendValuesMap));
+		return kpiElement;
+	}
 
-    /**
-     * Populates KPI value to project leaf nodes. It also gives the trend analysis
-     * project wise.
-     *
-     * @param kpiElement
-     *            kpi element
-     * @param mapTmp
-     *            node map
-     * @param projectLeafNode
-     *            leaf node of project
-     * @param kpiRequest
-     *            kpi request
-     */
-    @SuppressWarnings("unchecked")
-    private void projectWiseLeafNodeValue(KpiElement kpiElement, Map<String, Node> mapTmp, Node projectLeafNode,
-                                          KpiRequest kpiRequest) {
-        CustomDateRange dateRange = KpiDataHelper.getStartAndEndDate(kpiRequest);
-        String requestTrackerId = getRequestTrackerId();
-        LocalDateTime currentDate = DateUtil.getTodayTime();
-        int dataPoints = kpiRequest.getXAxisDataPoints();
-        String duration = kpiRequest.getDuration();
+	/**
+	 * Populates KPI value to project leaf nodes. It also gives the trend analysis
+	 * project wise.
+	 *
+	 * @param kpiElement
+	 *            kpi element
+	 * @param mapTmp
+	 *            node map
+	 * @param projectLeafNode
+	 *            leaf node of project
+	 * @param kpiRequest
+	 *            kpi request
+	 */
+	@SuppressWarnings("unchecked")
+	private void projectWiseLeafNodeValue(KpiElement kpiElement, Map<String, Node> mapTmp, Node projectLeafNode,
+			KpiRequest kpiRequest) {
+		CustomDateRange dateRange = KpiDataHelper.getStartAndEndDate(kpiRequest);
+		String requestTrackerId = getRequestTrackerId();
+		LocalDateTime currentDate = DateUtil.getTodayTime();
+		int dataPoints = kpiRequest.getXAxisDataPoints();
+		String duration = kpiRequest.getDuration();
 
-        List<Tool> scmTools = DeveloperKpiHelper.getScmToolsForProject(projectLeafNode, configHelperService,
-                kpiHelperService);
+		List<Tool> scmTools = DeveloperKpiHelper.getScmToolsForProject(projectLeafNode, configHelperService,
+				kpiHelperService);
 
-        if (CollectionUtils.isEmpty(scmTools)) {
-            log.error("[BITBUCKET-AGGREGATED-VALUE]. No SCM tools found for project {}",
-                    projectLeafNode.getProjectFilter());
-            return;
-        }
+		if (CollectionUtils.isEmpty(scmTools)) {
+			log.error("[BITBUCKET-AGGREGATED-VALUE]. No SCM tools found for project {}",
+					projectLeafNode.getProjectFilter());
+			return;
+		}
 
-        Map<String, Object> resultmap = fetchKPIDataFromDb(List.of(projectLeafNode),
-                dateRange.getStartDate().toString(), dateRange.getEndDate().toString(), kpiRequest);
-        List<ScmMergeRequests> mergeRequests = (List<ScmMergeRequests>) resultmap.get(MERGE_REQUEST_LIST);
-        Set<Assignee> assignees = new HashSet<>((Collection<Assignee>) resultmap.get(ASSIGNEE_SET));
+		Map<String, Object> resultmap = fetchKPIDataFromDb(List.of(projectLeafNode),
+				dateRange.getStartDate().toString(), dateRange.getEndDate().toString(), kpiRequest);
+		List<ScmMergeRequests> mergeRequests = (List<ScmMergeRequests>) resultmap.get(MERGE_REQUEST_LIST);
+		Set<Assignee> assignees = new HashSet<>((Collection<Assignee>) resultmap.get(ASSIGNEE_SET));
 
-        if (CollectionUtils.isEmpty(mergeRequests)) {
-            log.error("[BITBUCKET-AGGREGATED-VALUE]. No merge requests found for project {}", projectLeafNode);
-            return;
-        }
+		if (CollectionUtils.isEmpty(mergeRequests)) {
+			log.error("[BITBUCKET-AGGREGATED-VALUE]. No merge requests found for project {}", projectLeafNode);
+			return;
+		}
 
-        Map<String, List<DataCount>> aggregatedDataMap = new LinkedHashMap<>();
-        List<RepoToolValidationData> validationDataList = new ArrayList<>();
+		Map<String, List<DataCount>> aggregatedDataMap = new LinkedHashMap<>();
+		List<RepoToolValidationData> validationDataList = new ArrayList<>();
 
-        for (int i = 0; i < dataPoints; i++) {
-            CustomDateRange weekRange = KpiDataHelper.getStartAndEndDateTimeForDataFiltering(currentDate, duration);
-            String dateLabel = KpiHelperService.getDateRange(weekRange, duration);
+		for (int i = 0; i < dataPoints; i++) {
+			CustomDateRange weekRange = KpiDataHelper.getStartAndEndDateTimeForDataFiltering(currentDate, duration);
+			String dateLabel = KpiHelperService.getDateRange(weekRange, duration);
 
-            List<ScmMergeRequests> filteredMergeRequests = mergeRequests.stream().filter(request -> DateUtil.isWithinDateTimeRange(DateUtil.convertMillisToLocalDateTime(request.getUpdatedDate()),
-                            weekRange.getStartDateTime(), weekRange.getEndDateTime()))
-                    .toList();
+			List<ScmMergeRequests> filteredMergeRequests = mergeRequests.stream()
+					.filter(request -> DateUtil.isWithinDateTimeRange(
+							DateUtil.convertMillisToLocalDateTime(request.getUpdatedDate()),
+							weekRange.getStartDateTime(), weekRange.getEndDateTime()))
+					.toList();
 
-            scmTools.forEach(tool -> processToolData(tool, filteredMergeRequests, assignees, aggregatedDataMap,
-                    validationDataList, dateLabel, projectLeafNode.getProjectFilter().getName()));
+			scmTools.forEach(tool -> processToolData(tool, filteredMergeRequests, assignees, aggregatedDataMap,
+					validationDataList, dateLabel, projectLeafNode.getProjectFilter().getName()));
 
-            currentDate = DeveloperKpiHelper.getNextRangeDate(duration, currentDate);
-        }
+			currentDate = DeveloperKpiHelper.getNextRangeDate(duration, currentDate);
+		}
 
-        mapTmp.get(projectLeafNode.getId()).setValue(aggregatedDataMap);
-        populateExcelData(requestTrackerId, validationDataList, kpiElement);
-    }
+		mapTmp.get(projectLeafNode.getId()).setValue(aggregatedDataMap);
+		populateExcelData(requestTrackerId, validationDataList, kpiElement);
+	}
 
-    private void processToolData(Tool tool, List<ScmMergeRequests> mergeRequests, Set<Assignee> assignees,
-                                 Map<String, List<DataCount>> aggregatedDataMap, List<RepoToolValidationData> validationDataList,
-                                 String dateLabel, String projectName) {
-        if (!DeveloperKpiHelper.isValidTool(tool)) {
-            return;
-        }
+	private void processToolData(Tool tool, List<ScmMergeRequests> mergeRequests, Set<Assignee> assignees,
+			Map<String, List<DataCount>> aggregatedDataMap, List<RepoToolValidationData> validationDataList,
+			String dateLabel, String projectName) {
+		if (!DeveloperKpiHelper.isValidTool(tool)) {
+			return;
+		}
 
-        String branchName = getBranchSubFilter(tool, projectName);
-        String overallKpiGroup = branchName + "#" + Constant.AGGREGATED_VALUE;
+		String branchName = getBranchSubFilter(tool, projectName);
+		String overallKpiGroup = branchName + "#" + Constant.AGGREGATED_VALUE;
 
-        List<ScmMergeRequests> matchingRequests = DeveloperKpiHelper.filterMergeRequestsForBranch(mergeRequests, tool);
+		List<ScmMergeRequests> matchingRequests = DeveloperKpiHelper.filterMergeRequestsForBranch(mergeRequests, tool);
 
-        long defectMergeRequestsCount = matchingRequests.stream()
-                .filter(mergeRequest -> mergeRequest.getTitle() != null &&
-                        DEFECT_KEYWORDS.stream().anyMatch(keyword ->
-                                mergeRequest.getTitle().toLowerCase().contains(keyword.toLowerCase())))
-                .count();
+		long defectMergeRequestsCount = matchingRequests.stream()
+				.filter(mergeRequest -> mergeRequest.getTitle() != null && DEFECT_KEYWORDS.stream()
+						.anyMatch(keyword -> mergeRequest.getTitle().toLowerCase().contains(keyword.toLowerCase())))
+				.count();
 
-        long totalMergeRequests = matchingRequests.size();
+		long totalMergeRequests = matchingRequests.size();
 
-        double defectRate = totalMergeRequests > 0 ?
-                (defectMergeRequestsCount * 100.0) / totalMergeRequests : 0.0;
+		double defectRate = totalMergeRequests > 0 ? (defectMergeRequestsCount * 100.0) / totalMergeRequests : 0.0;
 
-        DeveloperKpiHelper.setDataCount(projectName, dateLabel, overallKpiGroup, defectRate,Map.of(MR_COUNT, defectMergeRequestsCount), aggregatedDataMap);
+		DeveloperKpiHelper.setDataCount(projectName, dateLabel, overallKpiGroup, defectRate,
+				Map.of(MR_COUNT, defectMergeRequestsCount), aggregatedDataMap);
 
-        Map<String, List<ScmMergeRequests>> userWiseMergeRequests = matchingRequests.stream()
-                .filter(req -> req.getAuthorId() != null && req.getAuthorId().getEmail() != null)//todo:: check
-                .collect(Collectors.groupingBy(request -> request.getAuthorId().getEmail()));
+		Map<String, List<ScmMergeRequests>> userWiseMergeRequests = matchingRequests.stream()
+				.filter(req -> req.getAuthorId() != null && req.getAuthorId().getEmail() != null)// todo:: check
+				.collect(Collectors.groupingBy(request -> request.getAuthorId().getEmail()));
 
-        validationDataList.addAll(prepareUserValidationData(userWiseMergeRequests, assignees, tool, projectName,
-                dateLabel, aggregatedDataMap));
-    }
+		validationDataList.addAll(prepareUserValidationData(userWiseMergeRequests, assignees, tool, projectName,
+				dateLabel, aggregatedDataMap));
+	}
 
-    private List<RepoToolValidationData> prepareUserValidationData(
-            Map<String, List<ScmMergeRequests>> userWiseMergeRequests, Set<Assignee> assignees, Tool tool,
-            String projectName, String dateLabel, Map<String, List<DataCount>> aggregatedDataMap) {
-        return userWiseMergeRequests.entrySet().stream().map(entry -> {
-            String userEmail = entry.getKey();
-            List<ScmMergeRequests> userMergeRequests = entry.getValue();
+	private List<RepoToolValidationData> prepareUserValidationData(
+			Map<String, List<ScmMergeRequests>> userWiseMergeRequests, Set<Assignee> assignees, Tool tool,
+			String projectName, String dateLabel, Map<String, List<DataCount>> aggregatedDataMap) {
+		return userWiseMergeRequests.entrySet().stream().map(entry -> {
+			String userEmail = entry.getKey();
+			List<ScmMergeRequests> userMergeRequests = entry.getValue();
 
-            String developerName = DeveloperKpiHelper.getDeveloperName(userEmail, assignees);
-            long defectMergeRequestsCount = userMergeRequests.stream()
-                    .filter(mergeRequest -> mergeRequest.getTitle() != null &&
-                            DEFECT_KEYWORDS.stream().anyMatch(keyword ->
-                                    mergeRequest.getTitle().toLowerCase().contains(keyword.toLowerCase())))
-                    .count();
+			String developerName = DeveloperKpiHelper.getDeveloperName(userEmail, assignees);
+			long defectMergeRequestsCount = userMergeRequests.stream()
+					.filter(mergeRequest -> mergeRequest.getTitle() != null && DEFECT_KEYWORDS.stream()
+							.anyMatch(keyword -> mergeRequest.getTitle().toLowerCase().contains(keyword.toLowerCase())))
+					.count();
 
-            long totalMergeRequests = userMergeRequests.size();
+			long totalMergeRequests = userMergeRequests.size();
 
-            double defectRate = totalMergeRequests > 0 ?
-                    (defectMergeRequestsCount * 100.0) / totalMergeRequests : 0.0;
+			double defectRate = totalMergeRequests > 0 ? (defectMergeRequestsCount * 100.0) / totalMergeRequests : 0.0;
 
-            String userKpiGroup = getBranchSubFilter(tool, projectName) + "#" + developerName;
+			String userKpiGroup = getBranchSubFilter(tool, projectName) + "#" + developerName;
 
-            DeveloperKpiHelper.setDataCount(projectName, dateLabel, userKpiGroup, defectRate, Map.of(MR_COUNT, defectMergeRequestsCount), aggregatedDataMap);
+			DeveloperKpiHelper.setDataCount(projectName, dateLabel, userKpiGroup, defectRate,
+					Map.of(MR_COUNT, defectMergeRequestsCount), aggregatedDataMap);
 
-            return createValidationData(projectName, tool, developerName, dateLabel, defectRate, defectMergeRequestsCount);
-        }).collect(Collectors.toList());
-    }
+			return createValidationData(projectName, tool, developerName, dateLabel, defectRate,
+					defectMergeRequestsCount, totalMergeRequests);
+		}).toList();
+	}
 
-    private RepoToolValidationData createValidationData(String projectName, Tool tool, String developerName,
-                                                        String dateLabel, double defectRate, long mrCount) {
-        RepoToolValidationData validationData = new RepoToolValidationData();
-        validationData.setProjectName(projectName);
-        validationData.setBranchName(tool.getBranch());
-        validationData.setRepoUrl(tool.getRepositoryName());
-        validationData.setDeveloperName(developerName);
-        validationData.setDate(dateLabel);
-        validationData.setDefectRate(defectRate);
-        validationData.setMrCount(mrCount);
-        return validationData;
-    }
+	private RepoToolValidationData createValidationData(String projectName, Tool tool, String developerName,
+			String dateLabel, double defectRate, long defectMrCount, long mrCount) {
+		RepoToolValidationData validationData = new RepoToolValidationData();
+		validationData.setProjectName(projectName);
+		validationData.setBranchName(tool.getBranch());
+		validationData.setRepoUrl(tool.getRepositoryName());
+		validationData.setDeveloperName(developerName);
+		validationData.setDate(dateLabel);
+		validationData.setDefectRate(defectRate);
+		validationData.setKpiPRs(defectMrCount);
+		validationData.setMrCount(mrCount);
+		return validationData;
+	}
 
+	private void populateExcelData(String requestTrackerId, List<RepoToolValidationData> validationDataList,
+			KpiElement kpiElement) {
+		if (requestTrackerId.toLowerCase().contains(KPISource.EXCEL.name().toLowerCase())) {
+			List<KPIExcelData> excelData = new ArrayList<>();
+			KPIExcelUtility.populateDefectRate(validationDataList, excelData);
+			kpiElement.setExcelData(excelData);
+			kpiElement.setExcelColumns(KPIExcelColumn.DEFECT_RATE.getColumns());
+		}
+	}
 
-    private void populateExcelData(String requestTrackerId, List<RepoToolValidationData> validationDataList,
-                                   KpiElement kpiElement) {
-        if (requestTrackerId.toLowerCase().contains(KPISource.EXCEL.name().toLowerCase())) {
-            List<KPIExcelData> excelData = new ArrayList<>();
-            KPIExcelUtility.populatePRSizeExcelData(validationDataList, excelData);
-            kpiElement.setExcelData(excelData);
-            kpiElement.setExcelColumns(KPIExcelColumn.DEFECT_RATE.getColumns());
-        }
-    }
+	@Override
+	public Double calculateKPIMetrics(Map<String, Object> stringObjectMap) {
+		return null;
+	}
 
-    @Override
-    public Double calculateKPIMetrics(Map<String, Object> stringObjectMap) {
-        return null;
-    }
+	@Override
+	public Double calculateKpiValue(List<Double> valueList, String kpiId) {
+		return calculateKpiValueForDouble(valueList, kpiId);
+	}
 
-    @Override
-    public Double calculateKpiValue(List<Double> valueList, String kpiId) {
-        return calculateKpiValueForDouble(valueList, kpiId);
-    }
+	@Override
+	public Map<String, Object> fetchKPIDataFromDb(List<Node> leafNodeList, String startDate, String endDate,
+			KpiRequest kpiRequest) {
+		Map<String, Object> resultMap = new HashMap<>();
 
-    @Override
-    public Map<String, Object> fetchKPIDataFromDb(List<Node> leafNodeList, String startDate, String endDate,
-                                                  KpiRequest kpiRequest) {
-        Map<String, Object> resultMap = new HashMap<>();
+		resultMap.put(ASSIGNEE_SET, getScmUsersFromBaseClass());
+		resultMap.put(MERGE_REQUEST_LIST, getMergeRequestsFromBaseClass());
+		return resultMap;
+	}
 
-        resultMap.put(ASSIGNEE_SET, getScmUsersFromBaseClass());
-        resultMap.put(MERGE_REQUEST_LIST, getMergeRequestsFromBaseClass());
-        return resultMap;
-    }
-
-    @Override
-    public Double calculateThresholdValue(FieldMapping fieldMapping) {
-        return calculateThresholdValue(fieldMapping.getThresholdValueKPI162(), KPICode.DEFECT_RATE.getKpiId());
-    }
+	@Override
+	public Double calculateThresholdValue(FieldMapping fieldMapping) {
+		return calculateThresholdValue(fieldMapping.getThresholdValueKPI162(), KPICode.DEFECT_RATE.getKpiId());
+	}
 }
